force-app/main/default/objects/Tracked_Bag__e/Tracked_Bag__e.object-meta.xml
<CustomObject>
    <description>Platform Event to get interaction with CONIQ in way to track all purchase and bags from the Brand.</description>
    <label>Tracked Bag</label>
    <pluralLabel>Tracked Bags</pluralLabel>
</CustomObject>