force-app/main/default/objects/Tracked_Bag__e/fields/brand_location_name__c.field-meta.xml
<CustomField>
    <fullName>brand_location_name__c</fullName>
    <description>Brand Location Name</description>
    <label>Brand Location Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>