force-app/main/default/objects/Tracked_Bag__e/fields/estimated_spend__c.field-meta.xml
<CustomField>
    <fullName>estimated_spend__c</fullName>
    <description>Purchase estimate spend</description>
    <label>Estimated Spend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>