force-app/main/default/objects/Tracked_Bag__e/fields/guest_barcode__c.field-meta.xml
<CustomField>
    <fullName>guest_barcode__c</fullName>
    <description>Decoded Guest code</description>
    <label>Guest Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>