force-app/main/default/objects/Tracked_Bag__e/fields/hfsbags_list__c.field-meta.xml
<CustomField>
    <fullName>hfsbags_list__c</fullName>
    <description>JSON list of bags as Text</description>
    <label>List of Bags</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>