force-app/main/default/objects/Tracked_Bag__e/fields/lease_id__c.field-meta.xml
<CustomField>
    <fullName>lease_id__c</fullName>
    <label>Brande Lease ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>