force-app/main/default/objects/Tracked_Bag__e/fields/numberofbags__c.field-meta.xml
<CustomField>
    <fullName>numberofbags__c</fullName>
    <description>N. of Bags for control</description>
    <label>Number of Bags</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>