force-app/main/default/objects/Tracked_Bag__e/fields/txn_datetime_utc__c.field-meta.xml
<CustomField>
    <fullName>txn_datetime_utc__c</fullName>
    <description>Date and Time from initiating the scans ISO8601 format</description>
    <label>DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>